--- a/daw/plantillaApuntes.html
+++ b/daw/plantillaApuntes.html
@@ -60,5 +60,20 @@
       <a class="btnArriba" href="#top">Arriba</a>
     </article>
   </section>
+  <section>
+    <h3>1.2.- SubTítulo</h3>
+    <article>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni consequuntur nam nisi?</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, dolorem quaerat labore incidunt repellat sapiente neque ipsum tempore adipisci quae.</p>
+      <p>Lorem ipsum dolor sit amet.</p>
+    </article>
+    <article>
+      <ul>
+        <li>Elemento</li>
+        <li>Elemento</li>
+        <li>Elemento</li>
+      </ul>
+    </article>
+  </section>
 </body>
 </html>
