--- a/daw/sistemas/sistemInfor.html
+++ b/daw/sistemas/sistemInfor.html
@@ -66,24 +66,33 @@
     </article>
     <article>
       <p>Para cubrir las necesidades que se nos plantean en el ámbito de la informática es preciso conocer en profundidad:</p>
-    <ol >
-      <li>- Hardware: Antes de escoger el software debemos tener encuenta en que equipos vamos a instalarlo. Características técnicas, conectividad y prestaciones. Si los equipos están en red debemos tener muy clara la estructura para alcanzar el máximo rendimiento.</li>
-      <li>- Software: Debemos conocer el tipo de programa que se necesita, sus funcionalidades y la liciencia bajo la que se distribuye.</li>
-    </ol>
     </article>
-  <!--*************************************************************-->
-    <a name="1.1"></a>
     <article>
-      <h3 class="subTitulo">Estructura y componentes de un sistema informático, periféricos y adaptadores para la conexión de dispositivos</h3>
+      <ol>
+        <li>- Hardware: Antes de escoger el software debemos tener encuenta en que equipos vamos a instalarlo. Características técnicas, conectividad y prestaciones. Si los equipos están en red debemos tener muy clara la estructura para alcanzar el máximo rendimiento.</li>
+        <li>- Software: Debemos conocer el tipo de programa que se necesita, sus funcionalidades y la liciencia bajo la que se distribuye.</li>
+      </ol>
+    </article>
+  </section>
+  <!--*************************************************************-->
+  <section>
+    <a name="1.1"></a>
+    <h3 class="subTitulo">Estructura y componentes de un sistema informático, periféricos y adaptadores para la conexión de dispositivos</h3>
+    <article>
+    <article>
       <p>El sistema informático se compone de una parte central (ordenador) y unos dispositivos que facilitan la entrada/salida de informácion (periféricos). Un ordenador está formado por dos tipos de elementos:</p>
+    </article>
+    <article>
       <ul>
         <li>Software: Componentes lógicos o programas.</li>
         <li>Hardware: Componentes físicos y electrónicos.</li>
       </ul>
     </article>
+    <h4 class="apartado">Hardware</h4>
     <article>
-      <h4 class="apartado">Hardware</h4>
       <p>Podemos encontrar diferentes tipos, dependiendo del rendimiento; comentaremos los fundamentales:</p>
+    </article>
+    <article>
       <ol class="decimal">
         <li>Caja, torre o chasis: Recinto donde se alojan los componentes. Se encarga de su protección, suele ser metálico o plástico.</li>
         <li>Fuente de alimentación: Es un transformador de corriente alterna a corriente continua con un voltaje apropiado para el funcionamiento de los componentes.</li>
@@ -99,11 +108,15 @@
     </article>
     <article>
       <p>En windows, el administrador de dispositivos nos muestra una lista de todos los componentes conectados a nuestro ordenador. Podemos actualizar o instalar drivers para configurar determinados periféricos.</p>
+    </article>
       <h4 class="apartado">Software</h4>
+    <article>
       <ul>
         <li>Sistema Operativo</li>
         <li>Aplicaciones</li>
       </ul>
+    </article>
+    <article>
       <ol>
         <li>Unidad central de proceso(CPU): Tiene como misión ejecutar las instrucciones de un programa. Está formada por circuitos que se encuentran integrados en un chip llamado microprocesador. Está compuesto por la unidad de control, la ALU, y los buses de entrada/salida.</li>
         <li>Unidad de control(UC): Es la parte pensante, su tarea es recibir información para interpretarla y procesarla mediante las órdenes que envía al resto de componentes.</li>
@@ -121,14 +134,18 @@
     <article>
       <p>El sistema informático como equipo único o conjunto de equipos de red, la conectividad es un término clave. Referencia la capacidad de los equipos y dispositivos para conectarse entre sí.</p>
       <p>Todo sistema informático estará compuesto de hardware y software. En un sentido más amplio debemos añadir a los usuarios (Recursos humanos) y por supuesto, ls información.</p>
-      <a class="btnArriba" href="#top">Arriba</a>
     </article>
+    <a class="btnArriba" href="#top">Arriba</a>
+  </section>
   <!--*************************************************************-->
-  <a name="1.2"></a>
+  <section>
+    <a name="1.2"></a>
+    <h3 class="subTitulo">Tipos y topologias de red</h3>
     <article>
-      <h3 class="subTitulo">Tipos y topologias de red</h3>
       <p>Una red de ordenadores es un conjunto de equipos interconectados entre sí que permiten compartir recursos e información. Es necesario que dispongan de tarjeta de red, cables de conexión, dispositivos perifericos y un software adecuado.</p>
+    </article>
       <h4 class="apartado">Tipos de red según su extensión</h4>
+    <article>
         <ol>
           <li>PAN(Red de área personal): Cuando los equipos están situados a pocos metros y se utilizan solo para uso personal. Aparecieron para que el usuario no tuviera un solo equipo (ordenador) sino también tabletas, moviles y televisores. Para sacar provecho a estos dispositivos y las prestaciones que ofrecen es conveniente realizar una red entre todos.</li>
           <li>WLAN: Red lan inalámbrica, transmite información de forma inalámbrica.</li>
@@ -140,7 +157,9 @@
     </article>
     <article>
       <p>Toda red presenta una toplogía diferente, un diseño específico en los planos físicos y lógicos. Es en esencia un conjunto de equipos(nodos) interconectados, la manera en la que se establezcan las conexiones definirá su topología.</p>
-      <h4 class="apartado">Topologías Básicas</h4>
+    </article>
+    <h4 class="apartado">Topologías Básicas</h4>
+    <article>
         <ol>
           <li>Punto a punto: Un canal para comunicar solamente dos nodos.</li>
           <li>Bus: Único canal de comunicaciones al que se conectan los distintos dispositivos.</li>
@@ -156,6 +175,8 @@
     <article>
       <p>El modelo OSI describe como funciona una red y su estructura. Se trata de un modelo que se estructura en as, que definen las diferentes etapas por las que deben circular los datos para pasar de un dispositivo a otro de la misma red. <br>
       Las capas son siete y se agrupan de la siguiente forma: <br></p>
+    </article>
+    <article>
         <ol>
           <li>Aplicación: La más cercana al usuario.</li>
           <li>Presentación: Se encarga de que la información enviada a la capa de aplicación pueda ser leída con éxito.</li>
@@ -166,44 +187,56 @@
           <li>Física: Transmite las señales.</li>
         </ol>
     </article>
-    <article>
     <h4 class="apartado">Conectores de red</h4>
-    <ol>
-      <li>BNC: Emplea cable coaxial y es más compleja de configurar. Actualmente se encuentra en desuso.</li>
-      <li>RJ-45: Se emplean cables ethernet de 8 pines.</li>
-      <li>Red inalámbrica: Ha supuesto una revolución en este ámbito, permite habilitar redes sin necesidad de cablearlas físicamente.</li>
-    </ol>
-    <a class="btnArriba" href="#top">Arriba</a>
-  </article>
-  <!--*************************************************************-->
-  <a name="1.3"></a>
     <article>
-      <h3 class="subTitulo">Mapa físico y lógico de una red</h3>
-      <p>A la hora de crear o modificar una red es muy importante documentar su estructura. Deberá llevarse a cabo en dos frentes.</p>
-      <h4 class="apartado">Mapa físico</h4>
-      <p>Es una representación gráfica de una red en el mundo real. Todo deberá tenerse en cuenta para garantizar que la señal llegue a cada equipo de la mejor forma posible. Se realizan por aplicaciones que nos ofrecen subir los mapas como archivos en formatos para mostrar la representación y poder interacturar con los diferentes componentes o cosultar información de esta.</p>
-      <h4 class="apartado">Mapa lógico</h4>
-      <p>Documentación que hace referencia a los aspectos internos de la red. Es necesario saber que dirección ip tiene asignada cada ordenador, a que subred pertenece etc... Es una representación más técnica, que facilita el mantenimiento de la red, y la incorporación de nuevos nodos. Hay aplicaciones que nos ayudan a obtener la información necesaria de lso equipos, pero cuando se comprueba de forma masiva en redes muy grandes, se suele utilizar la consola de comandos.</p>
-      <a class="btnArriba" href="#top">Arriba</a>
+      <ol>
+        <li>BNC: Emplea cable coaxial y es más compleja de configurar. Actualmente se encuentra en desuso.</li>
+        <li>RJ-45: Se emplean cables ethernet de 8 pines.</li>
+        <li>Red inalámbrica: Ha supuesto una revolución en este ámbito, permite habilitar redes sin necesidad de cablearlas físicamente.</li>
+      </ol> 
     </article>
+    <a class="btnArriba" href="#top">Arriba</a>
+  </section>
   <!--*************************************************************-->
-  <a name="1.4"></a>
+  <section>
+    <a name="1.3"></a>
+    <h3 class="subTitulo">Mapa físico y lógico de una red</h3>
     <article>
-      <h3 class="subTitulo">Arquitectura de un Sistema Operativo</h3>
+      <p>A la hora de crear o modificar una red es muy importante documentar su estructura. Deberá llevarse a cabo en dos frentes.</p>
+    </article>
+    <h4 class="apartado">Mapa físico</h4>
+    <article>
+      <p>Es una representación gráfica de una red en el mundo real. Todo deberá tenerse en cuenta para garantizar que la señal llegue a cada equipo de la mejor forma posible. Se realizan por aplicaciones que nos ofrecen subir los mapas como archivos en formatos para mostrar la representación y poder interacturar con los diferentes componentes o cosultar información de esta.</p>
+    </article>
+    <h4 class="apartado">Mapa lógico</h4>
+    <article>
+      <p>Documentación que hace referencia a los aspectos internos de la red. Es necesario saber que dirección ip tiene asignada cada ordenador, a que subred pertenece etc... Es una representación más técnica, que facilita el mantenimiento de la red, y la incorporación de nuevos nodos. Hay aplicaciones que nos ayudan a obtener la información necesaria de lso equipos, pero cuando se comprueba de forma masiva en redes muy grandes, se suele utilizar la consola de comandos.</p>
+    </article>
+    <a class="btnArriba" href="#top">Arriba</a>
+  </section>
+  <!--*************************************************************-->
+  <section>
+    <a name="1.4"></a>
+    <h3 class="subTitulo">Arquitectura de un Sistema Operativo</h3>
+    <article>
       <p>Los sitemas operativos han evoluciodo de forma notable, las consolas tipo texto han dejado paso a interfaces de tipo gráfico como windows o mac os x.</p>
       <p>Podemos distinguir en la arquitectura los siguientes elementos clave: <br></p>
+    </article>
+    <article>
         <ul>
           <li><b>Núcleo del Sistema:</b> Componente que está ejecutandose permanentemente en la memoria. Se encargará de gestionar los recusrsos del ordenador, destacar la de asignar CPU y memoria a los procesos.</li>
           <li><b>La API del núcleo:</b> API(interfaz de programación de aplicaciones) comprende el conjunto de servicios que ofrece el sistema operativo a las aplicaciones estos pueden llamar al sistema operativo para valerse de él. <br>Mediante dichas llamadas el sistema puede efectuar operaciones básicas como abrir archivos, modificarlos, cerrarlos, etc. Puede ejecutar instruciones de entrada/salida para operaciones relacionadas con gráficos y sonido, comunicaciones, etc.</li>
           <li><b>El sistema de archivos:</b> Con él obtenemos una estructura lógica de la información grabada en las unidades de disco y podemos trabajar con directorios y archivos. Es frecuente que forme parte del kernel o núcleo.</li>
           <li><b>Controladores o drivers:</b> Permite que el sistema interactue con los dispositivos hardware del equipo. <br> La gestión se lleva a cabo a partir de ordenes que recibe el sistema operativo. Para introducirlas podemos usar la interfaz gráfica o la consola.</li>
         </ul>
-        <a class="btnArriba" href="#top">Arriba</a>
     </article>
+    <a class="btnArriba" href="#top">Arriba</a>
+  </section>
   <!--*************************************************************-->
-  <a name="1.5"></a>
+  <section>
+    <a name="1.5"></a>
+    <h3 class="subTitulo">Funciones del Sistema Operativo</h3>
     <article>
-      <h3 class="subTitulo">Funciones del Sistema Operativo</h3>
       <ul>
         <li>Administración de procesos: Decide el orden de procesamientos de los programas que están a la espera, así como asignar los recursos necesarios para su proceso.</li>
         <li>Administración de recursos: Este proceso lleva un registro que le permite conocer qué recursos están disponibles y cuáles están siendo utilizados, por cuánto tiempo y por quién.</li>
@@ -219,56 +252,72 @@
         <li>Gestión de usuarios y permisos: Administra los permisos a los usuarios que les permiten acceder al sistema y así evitar acciones que afecten al trabajo de otro usuario.</li>
         <li>Control de seguridad: Para tener en cuenta la seguridad del software, usuarios y la información almacenada en el sistema.</li>
       </ul>
-      <a class="btnArriba" href="#top">Arriba</a>
     </article>
+    <a class="btnArriba" href="#top">Arriba</a>
+  </section>
   <!--*************************************************************-->
+  <section>
   <a name="1.6"></a>
+  <h3 class="subTitulo">Tipos de sistemas operativos</h3>
     <article>
-      <h3 class="subTitulo">Tipos de sistemas operativos</h3>
       <p>Entendemos por sistema operativo el software encargado de poner en marcha un ordenador, garantizando su correcto funcionamiento. Es el intermediario entre usuario y hardware. Los podemos clasificar: <br></p>
-      <h4 class="apartado">Según la cantidad de procesos que pueden gestionar de forma simultánea</h4>
+    </article>
+    <h4 class="apartado">Según la cantidad de procesos que pueden gestionar de forma simultánea</h4>
+    <article>
         <ul>
           <li>Monotarea: Un proceso en ejecución realiza tareas simultaneamente.</li>
           <li>Multitarea: Ejecuta varios procesos a la vez, en dos procesos pueden utilizar dos CPU diferentes.</li>
         </ul>
-      <h4 class="apartado">Según el número de usuarios</h4>
-        <ul>
-          <li>Monousuario: Único usuario trabaja con un solo ordenador.</li>
-          <li>Multiusuario: Varios usuarios pueden trabajar simultánemente.</li>
-        </ul>
-      <h4 class="apartado">Según el número de procesadores</h4>
-        <ul>
-          <li>Monoproceso: Solo un proceso a la vez. Realiza tareas rotatorias con intercambio muy rápido.</li>
-          <li>Multiproceso: Diferentes tareas al mismo tiempo, ofrece varios procesos de forma simultánea.</li>
-        </ul>
-      <h4 class="apartado">Según los servicios que ofrece</h4>
-        <ul>
-          <li>Centralizados: Todos los recursos se encuentran en una misma máquina.</li>
-          <li>Distribuidos: Los recursos pueden estar en diferentes máquinas conectadas en red.</li>
-        </ul>
-      <h4 class="apartado">Según el tipo de licencia</h4>
-        <ul>
-          <li>Propietarios: Limitaciones de uso. Propiedad de alguna empresa.</li>
-          <li>Libres: Permiten la modificación del producto. Usar el programa libremente.</li>
-        </ul>
-        <a class="btnArriba" href="#top">Arriba</a>
     </article>
-  <!--*************************************************************-->
-  <a name="1.7"></a>
+    <h4 class="apartado">Según el número de usuarios</h4>
     <article>
-      <h3 class="subTitulo">Tipos de aplicaciones</h3>
+      <ul>
+        <li>Monousuario: Único usuario trabaja con un solo ordenador.</li>
+        <li>Multiusuario: Varios usuarios pueden trabajar simultánemente.</li>
+      </ul>
+    </article>
+    <h4 class="apartado">Según el número de procesadores</h4>
+    <article>
+      <ul>
+        <li>Monoproceso: Solo un proceso a la vez. Realiza tareas rotatorias con intercambio muy rápido.</li>
+        <li>Multiproceso: Diferentes tareas al mismo tiempo, ofrece varios procesos de forma simultánea.</li>
+      </ul>
+    </article>
+    <h4 class="apartado">Según los servicios que ofrece</h4>
+    <article>
+      <ul>
+        <li>Centralizados: Todos los recursos se encuentran en una misma máquina.</li>
+        <li>Distribuidos: Los recursos pueden estar en diferentes máquinas conectadas en red.</li>
+      </ul>
+    </article>
+    <h4 class="apartado">Según el tipo de licencia</h4>
+    <article>
+      <ul>
+        <li>Propietarios: Limitaciones de uso. Propiedad de alguna empresa.</li>
+        <li>Libres: Permiten la modificación del producto. Usar el programa libremente.</li>
+      </ul>
+    </article>
+    <a class="btnArriba" href="#top">Arriba</a>
+  </section>
+  <!--*************************************************************-->
+  <section>
+  <a name="1.7"></a>
+  <h3 class="subTitulo">Tipos de aplicaciones</h3>
+    <article>
       <ul>
         <li>Aplicaciones locales: Se almacenan en la unidad de disco local y solamente este tiene acceso a ellas.</li>
         <li>Aplicaciones en red: Se ejecutan en un entorno de red local. Las aplicaciones primero se ejecutan de manera local y segundo de manera remota.</li>
         <li>Aplicaciones web o en la nube: La mayor parte se ejecuta en un servidor remoto y queda accesible a través de internet. A veces los datos también se almacenan online.</li>
       </ul>
-      <a class="btnArriba" href="#top">Arriba</a>
     </article>
+    <a class="btnArriba" href="#top">Arriba</a>
+  </section>
   <!--*************************************************************-->
+  <section>
   <a name="1.8"></a>
+  <h3 class="subTitulo">Licencias y tipos</h3>
+  <h4 class="apartado">Licencias</h4>
     <article>
-      <h3 class="subTitulo">Licencias y tipos</h3>
-      <h4 class="apartado">Licencias</h4>
       <ul>
         <li>Gratuitas: Permite la redistribución, no permiten modificar su código fuente.</li>
         <li>Libres: Disponible para cualquier usuario, se puede utilizar, copiar y distribuir, en formato original o habiendo realizado modificaciones.</li>
@@ -276,15 +325,16 @@
         <li>Propietarios: Aquel cuyas copias, redistribuciones o modificaciones, están prohibidas por el propietario. Es necesario solicitar permiso a su propietario o pagar por ello.</li>
       </ul>
     </article>
+    <h4 class="apartado">El software comercial puede ser:</h4>
     <article>
-      <h4 class="apartado">El software comercial puede ser:</h4>
       <ul>
         <li>OEM: Forma parte de un equipo nuevo. Una vez activamos el hardware queda unido a esta licencia. Los fabricantes ponen limitaciones a su reinstalación. Está prohibida su venta y cesión a terceros, salvo si está especificado.</li>
         <li>Retail: Suele tener un coste más elevado. Es posible reinstalarlo, cederlo a terceros o venderlo, ya que pasa a ser propiedad del usuario.</li>
         <li>Por volumen: Destinado a grandes usuarios (Empresas). Similar a OEM, pero sin afectar a nuevos equipos. Determina el número de equipos en los que se utilizará. El fabricante está autorizado para comprobarlo.</li>
       </ul>
-      <a class="btnArriba" href="#top">Arriba</a>
     </article>
+    <a class="btnArriba" href="#top">Arriba</a>
+  </section>
   <!--*************************************************************-->
   <a name="1.9"></a>
     <article>
