--- a/daw/sistemas/sistemInfor.html
+++ b/daw/sistemas/sistemInfor.html
@@ -336,36 +336,43 @@
     <a class="btnArriba" href="#top">Arriba</a>
   </section>
   <!--*************************************************************-->
+  <section>
   <a name="1.9"></a>
+  <h3 class="subTitulo">Gestores de arranque</h3>
     <article>
-      <h3 class="subTitulo">Gestores de arranque</h3>
       <p>Los gestores de arranque son un pequeño programa que se ejecuta una vez iniciada la bios. Prepara los elementos más básicos para que el S.O. funcione.</p>
-      <a class="btnArriba" href="#top">Arriba</a>
     </article>
+    <a class="btnArriba" href="#top">Arriba</a>
+  </section>
   <!--*************************************************************-->
+  <section>
   <a name="1.10"></a>
+  <h3 class="subTitulo">Maquinas virtuales</h3>
     <article>
-      <h3 class="subTitulo">Maquinas virtuales</h3>
       <p>Son un software que nos permite instalar S.O. de forma que crea que está instalado en un equipo. Hay dos tipos diferentes, las de sistemas y las de proceso. Emulan un ordenador por completo y ejecutan un S.O. en su interior. <br>Utilizan el hardware instalado en el equipo base, todo funcionará como si de un pc normal se tratase.</p>
       <p>Las de proceso no emulan todo el equipo completo sino que ejecutan un proceso concreto como una aplicación. Son muy útiles para crear aplicaciones para varias plataformas, creando un entorno de ejecución para lidiar con el S.O. y no programar específicamente para un sistema.</p>
-      <a class="btnArriba" href="#top">Arriba</a>
     </article>
+    <a class="btnArriba" href="#top">Arriba</a>
+  </section>
   <!--*************************************************************-->
+  <section>
   <a name="1.11"></a>
-    <article>
-      <h3 class="subTitulo">Consideraciones previas a la instalación de sistemas operativos libres y propietarios</h3>
+  <h3 class="subTitulo">Consideraciones previas a la instalación de sistemas operativos libres y propietarios</h3>  
+  <article>
       <ul>
         <li>Requisitos del hardware: La documentación de los S.O. ofrece características mínimas requeridas.</li>
         <li>Medios para la instalación del S.O.: Periféricos para leer los ficheros de instalación.</li>
         <li>Undidad de destino: La partición o disco óptimo será la que disponga de mayor rápidez en la lectura/escritura de datos. Es importante planificar que el S.O. y los archivos se encuentren en diferentes particiones. La instalación del S.O. conllevará la destrucción de los datos de la partición elegida, antes será vital realizar una copia de seguridad.</li>
       </ul>
-      <a class="btnArriba" href="#top">Arriba</a>
     </article>
+    <a class="btnArriba" href="#top">Arriba</a>
+  </section>
   <!--*************************************************************-->
+  <section>
   <a name="1.12"></a>
-    <article>
-      <h3 class="subTitulo">Instalación de sistemas o requisitos, versiones y licencias</h3>
-      <h4 class="apartado">Los requisitos principales son:</h4>
+  <h3 class="subTitulo">Instalación de sistemas o requisitos, versiones y licencias</h3>
+  <h4 class="apartado">Los requisitos principales son:</h4>  
+  <article>    
       <ul>
         <li>Tipo y velocidad de la CPU</li>
         <li>Cantidad de memoria RAM instalada</li>
@@ -373,74 +380,101 @@
         <li>Tipo de tarjeta gráfica</li>
         <li>Dispositivos necesarios (Lector DVD, puerto USB, etc..)</li>
       </ul>
+  </article>
+  <article>
       <p>En la documentación también suelen especificarse unos requerimientos recomendados, es ideal que los cumplamos para obtener un rendimiento óptimo. Sistemas como windows ofrecen distintas modalidades (starter, home, ultimate, pro, etc..) <br>Si es de régimen propietario debemos adquirir una licencia.</p>
       <p>Las particiones son divisiones lógicas en el disco físico. El S.O. trata cada partición como si fuera un disco independiente, de modo que podamos tener diferentes S.O. en particiones distintas.</p>
     </article>
+    <h4 class="apartado">Tipos de particiones</h4>
     <article>
-      <h4 class="apartado">Tipos de particiones</h4>
       <ul>
         <li>Primarias: Pueden ser reconocidas como particiones de arranque. Un disco cuenta con una única partición primaria que abarca todo el espacio disponible, está limitado a cuatro.</li>
         <li>Extendidas o secundarias: Complemento o ampliación de las primarias que permiten definir más unidades lógicas. Se crearon para saltarse la limitación de cuatro particiones primarias por disco.</li>
       </ul>
-      <a class="btnArriba" href="#top">Arriba</a>
     </article>
+    <a class="btnArriba" href="#top">Arriba</a>
+  </section>
   <!--*************************************************************-->
+  <section>
   <a name="1.13"></a>
-    <article>
-      <h3 class="subTitulo">Instalación y desintalación de aplicaciones. Requisitos, versiones y licencias.</h3>
+  <h3 class="subTitulo">Instalación y desintalación de aplicaciones. Requisitos, versiones y licencias.</h3>  
+  <article>
       <p>Antes de instalarlas debemos estar seguros de que cumplimos lo especificado en la documentación.</p>
-      <ul>
-        <li>Requisitos: Nuestro hardware y sitemas operativos son aptos para la ejecución de las aplicaciones.</li>
-        <li>Versiones: La versión más reciente no será necesariamente la mejor. Debemos elegir la mejor para los fines que perseguimos.</li>
-        <li>Licencia: Si es shareware o comercial debemos actuar de acuerdo a la legalidad vigente.</li>
-      </ul>
+  </article>
+  <article>
+    <ul>
+      <li>Requisitos: Nuestro hardware y sitemas operativos son aptos para la ejecución de las aplicaciones.</li>
+      <li>Versiones: La versión más reciente no será necesariamente la mejor. Debemos elegir la mejor para los fines que perseguimos.</li>
+      <li>Licencia: Si es shareware o comercial debemos actuar de acuerdo a la legalidad vigente.</li>
+    </ul>
+  </article>
+  <article>
       <p>La instalación implica llevar a cabo las operaciones precisas para que se pueda ejecutar. Normalmente disponen de un asistente, se distribuyen en un paquete comprimido que bastará con descomprimir.</p>
       <p>La desinstalación es el proceso inverso y el S.O. brinda herramientas para ello.</p>
       <p>Debemos señalar que las sucesivas instalaciones y desinstalaciones van dejando restos en los ficheros de configuración. Estos restos pueden incidir negativamente en el rendimiento.</p>
-      <a class="btnArriba" href="#top">Arriba</a>
     </article>
+    <a class="btnArriba" href="#top">Arriba</a>
+  </section>
   <!--*************************************************************-->
+  <section>
   <a name="1.14"></a>
-    <article>
-      <h3 class="subTitulo">Actualización de sistemas operativos y aplicaciones</h3>
+  <h3 class="subTitulo">Actualización de sistemas operativos y aplicaciones</h3>  
+  <article>
       <ul>
         <li>Actualización: Instalar la nueva versión sin desinstalar la previa.</li>
         <li>Instalación en limpio: A veces debemos desinstalar la versión previa antes de instalar la nueva.</li>
       </ul>
+  </article>
+  <article>
       <p> En ocasiones su propia interfaz nos advertirá de actualizaciones disponibles. Los S.O. también advierten de actualizaciones disponibles, estas mejoraran y perfilarán funcionalidades y también redundarán en una mayor seguridad. En S.O. linux se pueden utilizar comandos o aplicaciones para comprobar las actualizaciones.</p>
-      <a class="btnArriba" href="#top">Arriba</a>
-    </article>
+  </article>
+  <a class="btnArriba" href="#top">Arriba</a>
+  </section>
   <!--*************************************************************-->
+  <section>
   <a name="1.15"></a>
-    <article>
-      <h3 class="subTitulo">Archivos de inicio de S.O.</h3>
+  <h3 class="subTitulo">Archivos de inicio de S.O.</h3>  
+  <article>
       <p>Los pasos para iniciar un ordenador varian dependiendo a diversos factores, dispositivos de arranque, existencia de particiones, etc...</p>
-      <ol>
-        <li>La bios inicia la pantalla y el teclado, verifica la memoria RAM, la fecha y otros datos. El orden de arranque de los periféricos es clave para que el sistema inicie correctamente.</li>
-        <li>Luego, carga el gestor de arranque y seguidamente el S.O. Aquí se ejecutan los archivos de inicio. Se ocupan de cargar en memoria los servicios o los programas residentes.</li>
-      </ol>
+  </article>
+  <article>
+    <ol>
+      <li>La bios inicia la pantalla y el teclado, verifica la memoria RAM, la fecha y otros datos. El orden de arranque de los periféricos es clave para que el sistema inicie correctamente.</li>
+      <li>Luego, carga el gestor de arranque y seguidamente el S.O. Aquí se ejecutan los archivos de inicio. Se ocupan de cargar en memoria los servicios o los programas residentes.</li>
+    </ol>
+  </article>
+  <article>
       <p>Estos archivos pueden editarse con un editor de texto simple. En algunos casos contamos con software específico para operar cambios.</p>
-      <a class="btnArriba" href="#top">Arriba</a>
     </article>
+    <a class="btnArriba" href="#top">Arriba</a>
+  </section>
   <!--*************************************************************-->
+  <section>
   <a name="1.16"></a>
-    <article>
-      <h3 class="subTitulo">Registros del sistema</h3>
+  <h3 class="subTitulo">Registros del sistema</h3>  
+  <article>
       <p>En determinados S.O. nos brinda un registro que centraliza la configuración, sus servicios y aplicaciones. El visor de eventos complementan la información del registro. Es preciso realizar mantenimiento y limpieza regular.</p>
-      <a class="btnArriba" href="#top">Arriba</a>
     </article>
+    <a class="btnArriba" href="#top">Arriba</a>
+  </section>
   <!--*************************************************************-->
+  <section>
   <a name="1.17"></a>
+  <h3 class="subTitulo">Actualización y mantenimiento de controladores de dispositivos</h3>
     <article>
-      <h3 class="subTitulo">Actualización y mantenimiento de controladores de dispositivos</h3>
       <p>Drivers o controladores permiten que el S.O. pueden trabajar con ellos, conforme vayan apareciendo nuevas versiones de ellos para optimizar el rendimiento y minimizar problemas en el futuro.</p>
+    </article>
+    <article>
       <ul>
         <li>Actualización desde el sistema: El S.O. permite comprobar si hay nuevas versiones y actualizarlas directamente.</li>
         <li>Descarga online: Casi todos los fabricantes disponen de una web de donde descargar.</li>
       </ul>
-      <p>Dada su importancia lo ideal es respaldarlos en un momento en el que todo funcione correctamente.</p>
-      <a class="btnArriba" href="#top">Arriba</a>
     </article>
+    <article>
+      <p>Dada su importancia lo ideal es respaldarlos en un momento en el que todo funcione correctamente.</p>
+      
+    </article>
+    <a class="btnArriba" href="#top">Arriba</a>
   </section>
 </body>
 </html> 
