--- a/daw/proUno/proCinco.html
+++ b/daw/proUno/proCinco.html
@@ -14,7 +14,7 @@
   <header>
     <a name="top"></a>
     <div class="navtop">
-      <span>Apuntes</span>
+      <span id="apuntes">Apuntes</span>
       <span>Programación I</span>
       <span><a href="../../index.html">Principal</a></span>
     </div>
