terminado estructura nueva

--- a/daw/proUno/programUno.html
+++ b/daw/proUno/programUno.html
@@ -46,8 +46,8 @@
   </section>
   <!--*************************************************************-->
   <section>
+    <h3 class="subTitulo">Introducción</h3>
     <article>
-      <h3 class="subTitulo">Introducción</h3>
       <p>
         Un programa es un conjunto de instrucciones dadas al ordenador
         en un lenguaje que solo es entendible por él para
@@ -60,54 +60,62 @@
         que un programa es al conjunto de tareas o instrucciones a realizar
         por un ordenador.
       </p>
-      <p>Caractéristicas de un programa:</p>
-        <ul>
-          <li>Deber ser finito: formado por un conjunto limitado de
-            sentencias.</li>
-          <li>Debe ser legible: es importante crear códigos limpios y
-            fáciles de leer con tabulaciones y espacios que diferencien
-            las partes del programa.</li>
-          <li>Debe ser modificable: debe ser sencillo el proceso de actualización
-            o modificación ante nuevas necesidades.</li>
-          <li>Debe ser eficiente: debemos crear programas que ocupen
-            poco espacio en memoria y se ejecuten rápidamente.</li>
-          <li>Debe ser modulable: debemos realizar algoritmos que se
-            dividan a su vez en subalgoritmos de forma que se disponga
-            de un grupo principal desde el que llamaremos al
-            resto. Así, incitamos a la reutilización de código.</li>
-          <li>Debe ser estructurado: será fácil de leer y modificar, 
-            y estará compuesto de subprogramas que permitirán la 
-            reutilización de código.</li>
-        </ul>
-      <a class="btnArriba" href="#top">Arriba</a>
     </article>
-    <!--*************************************************************-->
-    <a name="1.1"></a>
+    <h4>Caractéristicas de un programa:</h4>
     <article>
-      <h3 class="subTitulo">Representaciones gráficas</h3>
+      <ul>
+        <li>Deber ser finito: formado por un conjunto limitado de
+          sentencias.</li>
+        <li>Debe ser legible: es importante crear códigos limpios y
+          fáciles de leer con tabulaciones y espacios que diferencien
+          las partes del programa.</li>
+        <li>Debe ser modificable: debe ser sencillo el proceso de actualización
+          o modificación ante nuevas necesidades.</li>
+        <li>Debe ser eficiente: debemos crear programas que ocupen
+          poco espacio en memoria y se ejecuten rápidamente.</li>
+        <li>Debe ser modulable: debemos realizar algoritmos que se
+          dividan a su vez en subalgoritmos de forma que se disponga
+          de un grupo principal desde el que llamaremos al
+          resto. Así, incitamos a la reutilización de código.</li>
+        <li>Debe ser estructurado: será fácil de leer y modificar, 
+          y estará compuesto de subprogramas que permitirán la 
+          reutilización de código.</li>
+      </ul>
+    </article>
+    <a class="btnArriba" href="#top">Arriba</a>
+  </section>
+    <!--*************************************************************-->
+  <section>
+    <a name="1.1"></a>
+    <h3 class="subTitulo">Representaciones gráficas</h3>
+    <article>
       <p>Para representar un algoritmo, podemos utilizar dos
         herramientas gráficas: los diagramas de flujo y el pseudocódigo.</p>
       <p>Un diagrama de flujo es una representación gráfica de un
         proceso. Cada paso del proceso se representa con un símbolo
         diferente que contiene una breve descripción.</p>
-        <p>Debemos usar una serie de símbolos:</p>
-        <ul>
-          <li>Rectángulo esquinas redondas: Indican inicio o fin de programa.</li>
-          <li>Rectángulo: Representan una instrucción, un paso a dar o un proceso.</li>
-          <li>Paralelogramo: Operaciones de entrada/salida de datos.</li>
-          <li>Rombo: Usaremos este símbolo si nos encontramos en un punto en el
-            que se realizará una u otra acción en función de una decisión.</li>
-          <li>Circulo: Conector. Permite unir diferentes zonas del diagrama de
-            forma que se redefine el flujo de ejecución hacia otra parte
-            del diagrama.</li>
-          <li>Flechas: para indicar la dirección de flujo.</li>
-        </ul>
-      <a class="btnArriba" href="#top">Arriba</a>
     </article>
-    <!--*************************************************************-->
-    <a name="1.2"></a>
+    <h4>Debemos usar una serie de símbolos:</h4>
     <article>
-      <h3 class="subTitulo">Características de los diagramas de flujo</h3>
+      <ul>
+        <li>Rectángulo esquinas redondas: Indican inicio o fin de programa.</li>
+        <li>Rectángulo: Representan una instrucción, un paso a dar o un proceso.</li>
+        <li>Paralelogramo: Operaciones de entrada/salida de datos.</li>
+        <li>Rombo: Usaremos este símbolo si nos encontramos en un punto en el
+          que se realizará una u otra acción en función de una decisión.</li>
+        <li>Circulo: Conector. Permite unir diferentes zonas del diagrama de
+          forma que se redefine el flujo de ejecución hacia otra parte
+          del diagrama.</li>
+        <li>Flechas: para indicar la dirección de flujo.</li>
+      </ul>
+    </article>
+    <a class="btnArriba" href="#top">Arriba</a>
+  </section>
+    <!--*************************************************************-->
+  <section>
+    <a name="1.2"></a>
+    <h3 class="subTitulo">Características de los diagramas de flujo</h3>
+    <article>
       <ul>
         <li>Deben escribirse de arriba abajo o de izquierda a derecha.</li>
         <li>Debemos evitar el cruce de lineas, el unos de conectores debe producirse cuadno no exista otra opción.</li>
@@ -115,13 +123,17 @@
         <li>El texto que se escribe en las formas debe ser escueto y legible.</li>
         <li>Todos los símbolos de decisión deben tener más de una línea de salida, deben indicar qué camino seguir en función de la decisión tomada.</li>
       </ul>
-      <p>La otra herramienta para representar algoritmos es el pseudocódigo, que es la manera de representar distintas sentencias que va a realizar nuestro algoritomo. Este no se puede ejecutar en una máquina.</p>
-      <a class="btnArriba" href="#top">Arriba</a>
     </article>
-    <!--*************************************************************-->
-    <a name="1.3"></a>
     <article>
-      <h3 class="subTitulo">Características del pseudocódigo</h3>
+      <p>La otra herramienta para representar algoritmos es el pseudocódigo, que es la manera de representar distintas sentencias que va a realizar nuestro algoritomo. Este no se puede ejecutar en una máquina.</p>
+    </article>
+    <a class="btnArriba" href="#top">Arriba</a>
+  </section>
+    <!--*************************************************************-->
+  <section>
+    <a name="1.3"></a>
+    <h3 class="subTitulo">Características del pseudocódigo</h3>
+    <article>
       <ul>
         <li>Comienza con la palabra algoritmo seguido de su nombre.</li>
         <li>Secuencia de intrucciones de este algoritmo.</li>
@@ -129,53 +141,69 @@
         <li>Es recomendable la indentación, aunque no necesaria.</li>
         <li>No se diferencia entre mayúsculas y minúsculas.</li>
       </ul>
-      <a class="btnArriba" href="#top">Arriba</a>
     </article>
+    <a class="btnArriba" href="#top">Arriba</a>
+  </section>
     <!--*************************************************************-->
+  <section>
     <a name="1.4"></a>
+    <h3 class="subTitulo">Comunicación de un sistema informático</h3>
     <article>
-      <h3 class="subTitulo">Comunicación de un sistema informático</h3>
       <p>En el proceso de programación se comunica a un usuario con una máquina, se necesita:</p>
+    </article>
+    <article>
       <ul>
         <li>Usuario y máquina.</li>
         <li>El canal, Ej.: Teclado</li>
         <li>El lenguaje. debemos acercar los lenguajes para así lograr un entendimiento.</li>
       </ul>
+    </article>
+    <article>
       <p>Para solventar el problema de la comunicación tenemos lenguajes de tres tipos, alto nivel, nivel medio y bajo nivel. Los de alto nivel están más cerca del usuario, por el contrario los de bajo nivel se acercan más al lenguaje máquina.</p>
       <p>Implementararemos código con lenguajes de alto nivel para el cual necesitaremos traducción para convertir dicho programa en lenguaje máquina.</p>
-      <a class="btnArriba" href="#top">Arriba</a>
     </article>
+    <a class="btnArriba" href="#top">Arriba</a>
+  </section>
     <!--*************************************************************-->
+  <section>
     <a name="1.5"></a>
+    <h3 class="subTitulo">Características del lenguaje de alto nivel</h3>
     <article>
-      <h3 class="subTitulo">Características del lenguaje de alto nivel</h3>
       <ul>
         <li>Es totalmente independiente de la máquina y muy portable.</li>
         <li>Muy utilizado en el mercado laboral.</li>
         <li>Modificaciones como actualizaciones son fáciles de realizar.</li>
         <li>Para la traducción necesitaremos un compilador y un enlazador con librerías del lenguaje elegido.</li>
       </ul>
-      <a class="btnArriba" href="#top">Arriba</a>
     </article>
+    <a class="btnArriba" href="#top">Arriba</a>
+  </section>
     <!--*************************************************************-->
+  <section>  
     <a name="1.6"></a>
+    <h3 class="subTitulo">Características del lenguaje de bajo nivel</h3>
     <article>
-      <h3 class="subTitulo">Características del lenguaje de bajo nivel</h3>
       <ul>
         <li>Está relacionado con las características del hardware.</li>
         <li>Fácilmente traducible al lenguaje máquina.</li>
         <li>Es totalmente dependiente de la máquina.</li>
       </ul>
-      <p>La estructura de un programa informático y sus elementos principales son las variables, las constantes y los distintos operadores.</p>
-      <a class="btnArriba" href="#top">Arriba</a>
     </article>
-    <!--*************************************************************-->
-    <a name="1.7"></a>
     <article>
-      <h3 class="subTitulo">Lenguajes compilados e interpretados</h3>
+      <p>La estructura de un programa informático y sus elementos principales son las variables, las constantes y los distintos operadores.</p>
+    </article>
+    <a class="btnArriba" href="#top">Arriba</a>
+  </section>
+    <!--*************************************************************-->
+  <section>
+    <a name="1.7"></a>
+    <h3 class="subTitulo">Lenguajes compilados e interpretados</h3>
+    <article>
       <p>Los compilados son como su nombre indica aquellos que utilizan un compilador para traducirlos al lenguaje máquina.</p>
       <p>En los interpretados se efectúa directamente la traducción y ejecución simultáneamente para cada una de las sentencias. Un intérprete verifica cada línea cuando se escribe. La ejecución es más lenta debido a esta traducción simultánea.</p>
-      <p>Características de C#</p>
+    </article>
+    <h4>Características de C#</h4>
+    <article>
       <ul>
         <li>Orientado a objetos</li>
         <li>Dos categorías de tipos de datos: valor y referencia.</li>
@@ -185,7 +213,9 @@
         <li>Es compilado</li>
         <li>Genera un código intermedio llamado MSIL y ese código se vuelve a compilar para obtener el formato nativo en la máquina.</li>
       </ul>
-      <p>Características de Java</p>
+    </article>
+    <h4>Características de Java</h4>
+    <article>
       <ul>
         <li>Orientado a objetos</li>
         <li>Los argumentos con siempre pasados por valor.</li>
@@ -195,8 +225,8 @@
         <li>Compilado.</li>
         <li>Interpretado ya que el código máquina se puede ejecutar directamente siempre que la máquina disponga del intérprete y el sistema de ejecución en tiempo real.</li>
       </ul>
-      <a class="btnArriba" href="#top">Arriba</a>
     </article>
+    <a class="btnArriba" href="#top">Arriba</a>
   </section>
 </body>
 </html>
