--- a/daw/proUno/proDos.html
+++ b/daw/proUno/proDos.html
@@ -46,43 +46,57 @@
   <!--*************************************************************-->
   <section>
     <a name="2.0"></a>
+    <h3 class="subTitulo">Introducción</h3>
     <article>
-      <h3 class="subTitulo">Introducción</h3>
       <p>Para desarrollar nuestros programas utilizaremos el lenguaje de programación C# es un lenguaje de alto nivel que pertenece al conjunto de lenguajes de .NET. Para ello utilizaremos un IDE, un entorno de desarrollo integrado diseñado para el desarrollo de aplicaciones con un conjunto de herramientas integradas en una interfaz gráfica de usuario (GUI). Sus características son:</p>
+    </article> 
+    <article>
       <ul>
         <li><b>Editor de código fuente:</b> Ayuda a escribir el código resaltando la sintaxis de forma visual y rellenando de forma automática las distintas opciones que nos proporciona el lenguaje.</li>
         <li><b>Depurador:</b> Localiza errores de código.</li>
         <li><b>Compilación del código fuente:</b> Un código binario entendible por la máquina.</li>
       </ul>
-      <a class="btnArriba" href="#top">Arriba</a>
     </article>
+    <a class="btnArriba" href="#top">Arriba</a>
+  </section>
     <!--*************************************************************-->
+  <section>  
     <a name="2.1"></a>
+    <h3 class="subTitulo">Bloques de un programa informático</h3>
     <article>
-      <h3 class="subTitulo">Bloques de un programa informático</h3>
       <p>Un programa es una secuencia de intrucciones separadas por un punto y coma que se van a ir agrupando en diferentes bloques mediante llaves.</p>
       <p>Cuando creamos un nuevo proyecto, se crea la siguiente estructura.</p>
       <p>Primero nos crea la clase <b>program</b>. Una <b>clase</b> es una estructura de datos que está compuesta por atributos o variables y métodos o funciones.</p>
       <p>El método principal se denomina <b>Main</b>. Será el primero en ejecutarse en nuestro programa. Este tiene una serie de argumentos, que son cadenas de caracteres que podemos pasar línea de comandos.</p>
-      <h4 class="apartado">Entrada y salida por pantalla</h4>
+    </article>
+    <h4 class="apartado">Entrada y salida por pantalla</h4>
+    <article>
       <p>Emplearemos la clase <b>Console</b> para establecer la comunicación entre usuario y el programa.</p>
       <p>Para la salida por pantalla, vamos utilizar los métodos de esta clase, <b>Write</b> y <b>Writeline:</b></p>
+    </article>
+    <article>
       <ul>
         <li><b>Write()</b> escribe un valor o valores especificados en el flujo de salida estándar.</li>
         <li><b>WriteLine()</b> escribe un valor o valores especificado y se realiza un salto de línea en nuestra consola.</li>
       </ul>
+    </article>
+    <article>
       <p>Para la entrada de datos, utilizaremos el método <b>ReadLine()</b>. Este leerá el dato introducido por el usuario y devolverá un dato de tipo cadena (string).</p>
       <p>Otro método es <b>Read()</b>, que leerá el dato introducido y devolverá un dato tipo entero (int).</p>
       <p>También podemos utilizar <b>ReadKey(), aquí se obtiene el carácter presionado por el usuario y se muestra esta tecla por la pantalla.</b></p>
-      <a class="btnArriba" href="#top">Arriba</a>
     </article>
+    <a class="btnArriba" href="#top">Arriba</a>
+  </section>
     <!--*************************************************************-->
+  <section>  
     <a name="2.2"></a>
+    <h3 class="subTitulo">Variables. Usos y Tipos</h3>
     <article>
-      <h3 class="subTitulo">Variables. Usos y Tipos</h3>
       <p>Una <b>variable</b> es una estructura de datos que ocupan un espacio en memoria y pueden variar a lo largo de un programa.</p>
       <p>Cuando <b>declaramos una variable</b> establecemos el tipo de dato (entero, cadena, carácter, etc) y su identificador.</p>
-      <h4 class="apartado">Tipos de datos en C#:</h4>
+    </article>
+    <h4 class="apartado">Tipos de datos en C#:</h4>
+    <article>
       <ul>
         <li><b>Enteros con signo:</b> Sbyte, short, int, long.</li>
         <li><b>Enteros sin signo:</b> Byte, unshort, unit, ulong.</li>
@@ -91,11 +105,15 @@
         <li><b>Decimal de alta precisión:</b> Decimal.</li>
         <li><b>Booleano:</b> Bool</li>
       </ul>
+    </article>
+    <article>
       <p><b>Tipo Sting:</b> son cadenas de caracteres.</p>
       <p><b>Tipo de dato enumerado, enum:</b> días_semana {lunes, martes, miercoles};</p>
       <p>Tipos matriz: Unidimensionales y Multidimensionales.</p>
       <p>Para <b>definir una variable</b>, primero necesitamos conocer el tipo de datos que va almacenar y el nombre que le vamos asignar. Es importante que el nombre sea identificativo con su contenido.</p>
-      <p>Para <b>identificar a una variable</b>, debemos seguir una serie de normas:</p>
+    </article>
+    <h4>Para <b>identificar a una variable</b>, debemos seguir una serie de normas:</h4>
+    <article>  
       <ul>
         <li>Debe comenzar por un carácter (letra o "_").</li>
         <li>Debe estar formada por caracteres del alfabeto (no podemos usar ñ) o por dígitos (del 0 al 9). Se puede utilizar el subrayado("_").</li>
@@ -104,31 +122,48 @@
         <li>No puede llevar espacios en blanco.</li>
         <li>No se pueden utilizar palabras reservadas.</li>
       </ul>
+    </article>
+    <article>
       <p>A las variables también se les puede asignar un valor, ej.: int num = 5;</p>
       <p>Definimos una variable de tipo entero, llamada num y le asignamos el valor 5.</p>
-      <p>Las variables pueden ser dependiendo de su ámbito:</p>
+    </article>
+    <h4>Las variables pueden ser dependiendo de su ámbito:</h4>
+    <article>
       <ul>
         <li><b>Variables locales:</b> aquellas declaradas <b>dentro</b> de un método o función.</li>
         <li><b>Variables globales:</b> aquellas declaradas <b>fuera</b> de un método o función. Podemos acceder a ellas desde cualquier punto del programa.</li>
       </ul>
-      <p>No es buena prática utilizar variables globales. El problema es que se crean dependencias ocultas. Cuando la aplicación es grande, no se conoce los objetos que tiene ni sus relaciones.</p>
-      <a class="btnArriba" href="#top">Arriba</a>
     </article>
-    <!--*************************************************************-->
-    <a name="2.3"></a>
     <article>
-      <h3 class="subTitulo">Constantes y Literales. Tipos y utilidades</h3>
-      <h4 class="apartado">Constantes</h4>
+      <p>No es buena prática utilizar variables globales. El problema es que se crean dependencias ocultas. Cuando la aplicación es grande, no se conoce los objetos que tiene ni sus relaciones.</p>
+    </article>
+    <a class="btnArriba" href="#top">Arriba</a>
+  </section>
+    <!--*************************************************************-->
+  <section>
+    <a name="2.3"></a>
+    <h3 class="subTitulo">Constantes y Literales. Tipos y utilidades</h3>
+    <h4 class="apartado">Constantes</h4>
+    <article>  
       <p>Son aquellas cuyo contenido no se puede alterar a lo largo del programa. La palabra reservada es <b>const</b>, y se definen fuera del cuerpo de cualquier función, normalmente al principio del programa.</p>
+    </article>
+    <article>
       <p><b>Literales:</b> Así podemos representar de forma explícita todos los valores que pueden tomar los tipos básicos del lenguaje.</p>
-      <p><b>Literales enteros:</b>
-        <ul>
-          <li><b>Decimales:</b> sin ningún prefijo.</li>
-          <li><b>Hexadecimales:</b> con el prefijo de 0x o 0X.</li>
-        </ul>
-      </p>
+    </article>
+    <article>
+      <p><b>Literales enteros:</b></p>
+      <ul>
+        <li><b>Decimales:</b> sin ningún prefijo.</li>
+        <li><b>Hexadecimales:</b> con el prefijo de 0x o 0X.</li>
+      </ul>
+    </article>  
+    <article>
       <p><b>Literales reales:</b> sin sufijo o con el sufijo d o D es del tipo <b>double</b>.Con el sufijo f o F es del tipo <b>float</b>. Con el sufijo m o M es del tipo <b>decimal</b>.</p>
+    </article>
+    <article>
       <p><b>Literales de lógicos:</b> representados por los valores lógicos true (verdadero) y false (falso).</p>
+    </article>  
+    <article>
       <p><b>Literales de carácter:</b> cualquier carácter en C# podemos representarlo con comillas simpres ´´.</p>
       <p>Existen caracteres especiales:</p>
       <ul>
@@ -142,13 +177,15 @@
         <li>Tabulación horizontal: \t</li>
         <li>Tabulación vertical: \v</li>
       </ul>
-      <a class="btnArriba" href="#top">Arriba</a>
     </article>
+    <a class="btnArriba" href="#top">Arriba</a>
+  </section>
     <!--*************************************************************-->
+  <section>  
     <a name="2.4"></a>
-    <article>
-      <h3 class="subTitulo">Operadores del lenguaje de programación</h3>
-      <h4 class="apartado">Operadores aritméticos</h4>
+    <h3 class="subTitulo">Operadores del lenguaje de programación</h3>
+    <h4 class="apartado">Operadores aritméticos</h4>
+    <article>  
       <ul>
         <li>+ Suma aritmética de dos valores.</li>
         <li>++ Incremento en 1 del operando.</li>
@@ -158,15 +195,20 @@
         <li>/ División aritmética de dos valores.</li>
         <li>% Obtiene el resto de la división entera.</li>
       </ul>
+    <article>
       <p>El <b>operador de incremento ++</b> puede ser aplicado como prefijo o sufijo de una variable. Sucede lo mismo con el operador decremento --.</p>
       <p>La prioridad de los operadores (de mayor a menor):</p>
+    </article>
+    <article>  
       <ol>
         <li>De incremento y decremento sufijos.</li>
         <li>De incremento y decremento prefijos.</li>
         <li>De multiplicación, divsión, resta y %.</li>
         <li>De suma y resta.</li>
       </ol>
-      <h4 class="apartado">Operadores booleanos</h4>
+    </article>
+    <h4 class="apartado">Operadores booleanos</h4>
+    <article>
       <ul>
         <li>& AND lógico. Evalúa ambos operandos.</li>
         <li>&& AND lógico. Evalúa el operando derecho solo si es necesario.</li>
@@ -175,11 +217,15 @@
         <li>^ XOR lógico.</li>
         <li>! Negación lógica.</li>
       </ul>
+    </article>
+    <article>
       <p>El operador <b>AND lógico &</b> calcula el resultado de a & b es true si a y b se evalúan como true. Si no, el resultado es false.</p>
       <p><b>&&</b> también evalúa sus operandos, pero no evalúa el operando derecho si el izquierdo es false.</p>
       <p>| calcula el resultado de a | b es true si a o b se evalúan como true. Si no, es false.</p>
       <p>|| también evalúa sus operandos pero no evalúa el operando derecho si el izquierdo se evalúa como true.</p>
       <p>^ es el operador exclusivo o XOR. La tabla de la verdad es:</p>
+    </article>
+    <article>
       <table>
         <caption>Tabla de verdad XOR</caption>
         <tr>
@@ -208,8 +254,12 @@
           <td>F</td>
         </tr>
       </table>
+    </article>
+    <article>
       <p><b>El operador !</b> calcula la negación de su operando, si el operando es true, devolverá el valor false y viceversa.</p>
-      <h4 class="apartado">Operadores de comparación e igualdad</h4>
+    </article>
+    <h4 class="apartado">Operadores de comparación e igualdad</h4>
+    <article>
       <table>
         <caption>Operadores de comparación</caption>
         <tr>
@@ -241,26 +291,34 @@
           <td>Asignación</td>
         </tr>
       </table>
+    </article>
+    <article>
       <p>El operador < devuelve true si el operador izquierdo es menor que el derecho. El operador > devuelve true si el izquierdo es mayor que el derecho.</p>
       <p>El operador <= devuelve true si el izquierdo es menor o igual que el derecho. >= devuelve true si el izquierdo es mayor o igual que el derecho.</p>
       <p>El operador de igualdad == devuelve true si sus operandos son iguales.</p>
       <p>El operador de desigualdad != devuelve true si sus operadores son distintos.</p>
-      <a class="btnArriba" href="#top">Arriba</a>
     </article>
+    <a class="btnArriba" href="#top">Arriba</a>
+  </section>
     <!--*************************************************************-->
+  <section>  
     <a name="2.5"></a>
+    <h3 class="subTitulo">Conversiones de tipos de clase</h3>
     <article>
-      <h3 class="subTitulo">Conversiones de tipos de clase</h3>
       <p>Cuando declaramos una variable, no se puede volver a declarar, ni asignar un valor de otro tipo. En ocasiones, podemos convertir el valor de una variable de un tipo a otro. Podemos tener diferentes clases de conversiones:</p>
       <ul>
         <li><b>Conversiones implícitas:</b> son aquellas que se producen cuadno el valor que se va a almacenar se puede almacenar en una variable sin truncarse ni redondearse. Por ejemplo almacenar una variable int dentro de una variable long.</li>
         <li><b>Conversiones explícitas: cuando no hay posibilidad de realizar una conversión implícita debemos indicar al compilador que se pretende realizar una conversión que pueda producir una pérdida de datos.</b></li>
       </ul>
-      <h4 class="apartado">Parse y TryParse</h4>
+    </article>
+    <h4 class="apartado">Parse y TryParse</h4>
+    <article>
       <p>Con estos métodos podemos convertir una cadena en varios tipos numéricos: int, decimal, double...</p>
       <p>El método Parse devuelve el número convertido. TryParse devuelve un valor booleano indicado si la conversión se realizó correctamente o no, y devuelve el número convertido.</p>
-      <h4 class="apartado">Convert</h4>
-      <p>Es una clase que convierte un tipo de datos en otro. Algunos métodos son:</p>
+    </article>
+    <h4 class="apartado">Convert</h4>
+    <article>
+    <p>Es una clase que convierte un tipo de datos en otro. Algunos métodos son:</p>
       <table>
         <caption>Métodos de Conversión</caption>
         <tr>
@@ -300,21 +358,22 @@
           <td>Convierte un valor en su representación de cadena.</td>
         </tr>
       </table>
-      <div class="btnArriba"><a href="#top">Arriba</a></div>
     </article>
+    <div class="btnArriba"><a href="#top">Arriba</a></div>
+  </section>
     <!--*************************************************************-->
+  <section>
     <a name="2.6"></a>
+    <h3 class="subTitulo">Comentario al código</h3>
     <article>
-      <h3 class="subTitulo">Comentario al código</h3>
       <p>No debemos pasar por alto que, además de realizar programas, lo debemos hacer de la forma más optimizada y ordenada posible. Los <b>comentarios</b> son una herramienta disponible en el compilador para que se puedan hacer anotaciones en el código sin que sea procesado por el compilador. Está permitido hacer dos tipos de comentarios:</p>
       <ul>
         <li><b>Comentarios de una línea:</b> son frases cortas, solo pueden ocupar una línea del código. Para comenzar escribir // antes de comenzar con dichas anotaciones.</li>
         <li><b>Comentarios multiline o multilíneas:</b> Son comentarios de varias líneas, para una explicación más detallada. Debemos englobar el contenido entre los caracteres /* y */.</li>
       </ul>
       <p>El uso de comentarios es muy útil, se aconseja su uso para documentar correctamente el código.</p>
-      <a class="btnArriba" href="#top">Arriba</a>
     </article>
-    <!--*************************************************************-->
+    <a class="btnArriba" href="#top">Arriba</a>
   </section>
 </body>
 </html>
